corrected plain text on mobile

--- a/style.sass
+++ b/style.sass
@@ -301,6 +301,12 @@ nav .fa-solid
 
 
 @media(max-width: 700px) 
+	.plain-text
+		width: 90%
+		margin: auto
+		text-align: justify
+		padding-top: 2%
+		padding-bottom: 2%
 	.plain-text h1
 		padding-bottom: .5%
 		padding-top: 2%
